added testing credit card

--- a/payment/reic.html
+++ b/payment/reic.html
@@ -11,7 +11,8 @@
 
 <template name="info">
 	<div class="centerdiv">
-		This is a test for Stripe Checkout-based payment and membership signup. <a href="https://stripe.com/us/pricing">Stripe</a> takes 2.9% + 30 cents per transaction, which is on the low end of credit card processors
+		This is a test for Stripe Checkout-based payment and membership signup. <a href="https://stripe.com/us/pricing">Stripe</a> takes 2.9% + 30 cents per transaction, which is on the low end of credit card processors.<br/>
+		<b>For testing, use credit card "4242 4242 4242 4242" with any arbitrary date, zip code, etc</b><br/>
 	</div>
 </template>
 	
