--- a/single_page_centered.html
+++ b/single_page_centered.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
+<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.2.3/showdown.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.4.0/lodash.min.js"></script>
@@ -17,7 +18,19 @@ var getUrlValue = function(VarSearch){
         }
     }
 }
+
+$(function() {
+	var converter = new showdown.Converter();
+	$(".markdown").each(function(i) {
+		$(this).html(converter.makeHtml($(this).html()));
+	});
+	//JAVASCRIPT HERE
+});
+
+
 </script>
+
+
 <style type="text/css">
 body {
 	margin: 0px;
@@ -31,6 +44,10 @@ body {
 	justify-content: center;
 	flex-direction: row;
 }
+
+.centerdiv {
+}
+
 </style>
 
 <!-- 
@@ -41,20 +58,6 @@ CUSTOMIZE BELOW
 
 <title>TITLE</title>
 
-<script>
-$(function() {
-	var converter = new showdown.Converter();
-	$(".markdown").each(function(i) {
-		$(this).html(converter.makeHtml($(this).html()));
-	});
-	//JAVASCRIPT HERE
-});
-</script>
-
-<style type="text/css">
-.centerdiv {
-}
-</style>
 </head>
 <body>
 <div class="flexcontainer">
