--- a/airtable_vue_auction/index.html
+++ b/airtable_vue_auction/index.html
@@ -314,7 +314,7 @@ Raoul Anchondo, Christhian Diaz, Ingrid Bromberg Kennedy, Leah Pires
 </div>
 
 <script>
-var apiURL = "https://api.airtable.com/v0/appSUkudxLxnEx8vY/Items%20to%20bid%20on?api_key=keyoQpvlH7D3w9kIB&view=Bidding%20Display";
+var apiURL = "https://api.airtable.com/v0/appSUkudxLxnEx8vY/Items%20to%20bid%20on?api_key=APIKEYHERE&view=Bidding%20Display";
 app = new Vue({
   el: '#artwork_container',
   data: {
