--- a/archlobby_vue_auction/scroller.html
+++ b/archlobby_vue_auction/scroller.html
@@ -41,6 +41,7 @@ CSS
 
 body {
   font-family: 'Favorit', 'Source Sans Pro', 'Helvetica', 'Arial', sans-serif;
+    color: white;
     margin: 0px;
     padding: 0px;
     height: 100%;
@@ -165,11 +166,12 @@ h1
     margin:0px 0px -18px 0px;    
 }
 a:link, a:visited    {
-    color:#000000;
+    color:white;
+
     text-decoration:underline;
 }
 a:hover    {
-    color:#000000;
+    color:white;
     text-decoration:none;
 }
 .bidding_details    {
